# test

./: .env  Oxford (Current).llms.txt  README.md  README_ETL.md  deploy.sh  find_emoji.py  generate_summary.py  run_pipeline.bat  run_tests.sh  tailwind.config.ts
.github/workflows/: deploy-pipeline.yaml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: endpoints.py
backend/app/models/: bronze.py  gold.py  silver.py
backend/etl/: aggregate.py  config.py  ingest.py  run.py  transform.py
backend/shared/: logging_config.py
backend/sql/: create_tables.sql
docs/: DATA_CATALOG.md  GLOSSARY.md  LINEAGE.md  OBSERVABILITY.md
infra/: main.bicep
infra/modules/: resources.bicep
oxford-deposit-dynamics-main/: package.json
oxford-deposit-dynamics-main/public/data/: household-balance-report.xlsx
oxford-deposit-dynamics-main/src/: index.css
oxford-deposit-dynamics-main/src/components/dashboard/: AIAssistant.tsx  (+6 more)
oxford-deposit-dynamics-main/supabase/: config.toml
scripts/: create_dummy_data.py
specs/: data_model_spec.yaml  etl_pipeline_spec.yaml  ux_component_spec.yaml
tests/: conftest.py
tests/data_model/: test_models.py
tests/etl_pipeline/: test_etl.py
ux/: index.html  package-lock.json  package.json  vitest.config.ts
ux/public/data/: household-balance-report.csv
ux/src/: App.test.tsx
ux/src/hooks/: useDashboardData.ts
ux/src/lib/: data-processor.ts  team-config.ts
ux/src/pages/: Index.tsx
ux/src/services/: api.ts  mockDataService.ts
ux/ux_md/: components.md  layout.md  pages.md  summary.md
(+10 files in other folders)
