[project]
name = "oxford-nexus-backend"
version = "0.1.0"
description = "FastAPI backend for Oxford Nexus Lakehouse"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "duckdb>=0.10.0",
    "polars>=0.20.0",
    "deltalake>=0.15.0",
    "python-dotenv>=1.0.0",
    "azure-identity>=1.15.0",
    "azure-storage-file-datalake>=12.14.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "pytest>=8.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
